--- a/styles/article.css
+++ b/styles/article.css
@@ -1,40 +1,88 @@
 main {
-    padding: 20px;
-    max-width: 800px;
-    margin: auto;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: "Roboto", sans-serif;
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: "Roboto", sans-serif;
+}
+
+article {
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+}
+
+article h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #333;
+  text-align: center;
+}
+
+article p {
+  margin-bottom: 1.5rem;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: #555;
+}
+
+@media (max-width: 768px) {
+  main {
+    padding: 15px;
   }
-  
+
   article {
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 10px;
+    padding: 15px;
   }
-  
-  article h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #333;
-    text-align: center;
-  }
-  
-  article p {
-    margin-bottom: 1.5rem;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    color: #555;
-  }
-  
-  @media (max-width: 768px) {
-    main {
-      padding: 15px;
-    }
-  
-    article {
-      padding: 15px;
-    }
-  }
-  
+}
+
+.project-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+.project-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.project-card img {
+  width: 100%;
+  height: auto;
+}
+
+.project-card h3 {
+  margin: 10px;
+  font-size: 1.5rem;
+  color: #333;
+  text-align: center;
+}
+
+.project-details {
+  padding: 10px;
+  display: none;
+  background-color: #f4f4f4;
+  font-size: 1rem;
+  color: #555;
+}
+
+.project-card.expanded .project-details {
+  display: block;
+}
+
+.project-preview {
+  display: none;
+  text-align: left;
+  padding-top: 10px;
+}
+
+#projects-link.expanded .project-preview {
+  display: block;
+}
