--- a/styles/article.css
+++ b/styles/article.css
@@ -40,10 +40,11 @@ article p {
 
 .project-grid {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
   padding: 20px;
 }
+
 .project-card {
   background-color: #fff;
   border-radius: 10px;
@@ -51,38 +52,146 @@ article p {
   overflow: hidden;
   transition: all 0.3s ease;
   cursor: pointer;
+  padding: 20px;
+  max-width: 100%;
+}
+
+.project-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .project-card img {
-  width: 100%;
+  float: left;
+  clear: left;
+  margin-right: 20px;
+  width: 150px;
   height: auto;
+  border-radius: 5px;
 }
 
 .project-card h3 {
-  margin: 10px;
   font-size: 1.5rem;
   color: #333;
-  text-align: center;
+  margin: 0;
+  line-height: 1.2;
 }
 
 .project-details {
-  padding: 10px;
   display: none;
   background-color: #f4f4f4;
   font-size: 1rem;
   color: #555;
+  overflow: hidden;
+  flex-grow: 1;
 }
 
 .project-card.expanded .project-details {
   display: block;
+  margin-top: 10px;
 }
 
-.project-preview {
-  display: none;
-  text-align: left;
-  padding-top: 10px;
+.project-card.expanded {
+  background-color: #f9f9f9;
 }
 
-#projects-link.expanded .project-preview {
+.project-card .project-details p,
+.project-card .project-details ul {
+  margin: 0 0 10px 0;
+}
+
+.project-card .project-details ul {
+  padding-left: 20px;
+}
+
+.project-card video {
+  margin-top: 10px;
+  max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .project-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .project-card img {
+    float: none;
+    margin: 0 0 10px 0;
+    width: 100%;
+  }
+
+  .project-card h3 {
+    margin-top: 10px;
+    text-align: center;
+  }
+}
+
+.project-images img {
   display: block;
+  margin-bottom: 10px;
+  max-width: 150px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.project-images img:last-child {
+  margin-bottom: 0;
+}
+
+.project-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.project-card h3 {
+  margin: 0 0 0 20px;
+  font-size: 1.5rem;
+  color: #333;
+  line-height: 1.2;
+}
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1000; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgba(0, 0, 0, 0.8); 
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+}
+
+.modal-caption {
+  margin: auto;
+  display: block;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
 }
