--- a/styles/main.css
+++ b/styles/main.css
@@ -94,7 +94,7 @@ body.dark-mode {
 /* Grid Container and Items */
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   padding: 20px;
   max-width: 1200px;
@@ -148,7 +148,7 @@ body.dark-mode {
 
 /* Specific Grid Items */
 .item1 {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   grid-row: 1 / 2;
 }
 
@@ -158,12 +158,23 @@ body.dark-mode {
 }
 
 .item3 {
-  grid-column: 2 / 3;
+  grid-column: 2 / 4;
   grid-row: 2 / 3;
 }
 
+.item5 {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+
+.item6 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+
 .item4 {
-  grid-column: span 2;
+  grid-column: 1 / 4;
+  grid-row: 4 / 5;
 }
 
 /* Hover Effects */
