--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,7 @@ footer {
   padding: 1rem;
   background-color: #333;
   color: white;
-  margin-top: auto;
+  margin-top: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
