--- a/styles/main.css
+++ b/styles/main.css
@@ -287,3 +287,44 @@ footer img {
     height: 25px;
   }
 }
+
+/*certificates and progress bar on codecademy page*/
+.certificates-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.progress-container {
+  margin: 20px 0;
+}
+
+/* Progress Bar Styles */
+.progress-container {
+  margin: 20px 0;
+}
+
+progress {
+  width: 100%;
+  height: 20px;
+  border-radius: 5px;
+  border: 2px solid #ccc;
+  background-color: #f3f3f3;
+}
+
+progress::-webkit-progress-bar {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+progress::-webkit-progress-value {
+  background-color: #4caf50;
+  border-radius: 5px;
+}
+
+progress::-moz-progress-bar {
+  background-color: #4caf50;
+  border-radius: 5px;
+}
