--- a/styles/article.css
+++ b/styles/article.css
@@ -263,3 +263,19 @@ article ul li::marker {
 .cfg-kickstarter-info {
   margin-top: 2%;
 }
+
+.certificate {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.certificate-thumbnail {
+  max-width: 150px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.certificate-thumbnail:hover {
+  transform: scale(1.05);
+}
